--- a/layout/index.html
+++ b/layout/index.html
@@ -161,8 +161,7 @@
                 <div class="top-article-preview-img"></div>
                 <div class="top-article-preview"></div>
             </aside>
-            <aside class="right"></aside>
-            <footer>
+            <aside class="right">
                 <div class="archive-second">
                     <article class="top"></article>
                     <article class="text-only"></article>
@@ -177,6 +176,9 @@
                 <div class="statistic">
                     
                 </div>
+            </aside>
+            <footer>
+                
             </footer>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
