--- a/layout/index.html
+++ b/layout/index.html
@@ -10,8 +10,9 @@
     <body>
         <div class="container">
             <header>
-                <div class="wrap-logo">
+                <div class="wrap-logo clearfix">
                     <div class="logo"></div>
+                    <h3>Portfolio WordPress</h3>
                     <div class="dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                           Dropdown
