--- a/layout/index.html
+++ b/layout/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+        <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -14,9 +15,10 @@
                     <div class="logo"></div>
                     <h3>Portfolio WordPress</h3>
                     <div class="dropdown">
+                        <i class="fa fa-map-marker"></i>
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                           Dropdown
-                          <span class="caret"></span>
+                          <i class="fa fa-angle-down"></i>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                           <li><a href="#">Action</a></li>
@@ -27,10 +29,11 @@
                         </ul>
                       </div>
                     <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                      Dropdown
-                      <span class="caret"></span>
-                    </button>
+                        <i class="fa fa-map-marker"></i>
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Dropdown
+                            <i class="fa fa-angle-down"></i>
+                        </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                       <li><a href="#">Action</a></li>
                       <li><a href="#">Another action</a></li>
@@ -51,9 +54,10 @@
                     <div>
                         <span>Quiklinks</span>
                         <div class="dropdown">
+                            <i class="fa fa-map-marker"></i>
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                               Dropdown
-                              <span class="caret"></span>
+                              <i class="fa fa-angle-down"></i>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                               <li><a href="#">Action</a></li>
@@ -68,17 +72,18 @@
                 <div class="search">
                     <input>
                     <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                      Dropdown
-                      <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                    </ul>
+                        <i class="fa fa-map-marker"></i>
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                          Dropdown
+                          <i class="fa fa-angle-down"></i>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                          <li><a href="#">Action</a></li>
+                          <li><a href="#">Another action</a></li>
+                          <li><a href="#">Something else here</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a href="#">Separated link</a></li>
+                        </ul>
                   </div>
                     <ul class="socials">
                         <li>
