--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -1,56 +1,3 @@
-/**
- * Developer for portfolio
- */
-header .wrap-logo {
-  height: 70px;
-  width: 100%;
-  background-color: #373737;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0; }
-  header .wrap-logo .logo {
-    width: 70px;
-    height: 70px;
-    margin-left: 5%;
-    background: #f26c4f url("../img/logo_50x50_wite.png") center center no-repeat;
-    position: relative;
-    display: inline-block; }
-    header .wrap-logo .logo:after {
-      content: "";
-      display: block;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 12.5px 0 12.5px 15px;
-      border-color: transparent transparent transparent #f26d4f;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: -15px;
-      margin: auto; }
-  header .wrap-logo h3 {
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto 0 auto 30px;
-    color: #ffffff;
-    line-height: 70px; }
-  header .wrap-logo .dropdown {
-    float: right; }
+.dropdown{position:relative}.dropdown>i{position:absolute;left:16px;top:0;bottom:0;color:#cf6c4f;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-webkit-align-items:center;align-items:center}.dropdown button{height:36px;border-radius:0;background-color:#fff;padding-left:40px;padding-right:60px}.dropdown button i{position:absolute;top:1px;right:1px;bottom:1px;width:35px;background-color:#ebebeb;border-left:1px solid #d8d8d8;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-webkit-align-items:center;align-items:center;-webkit-justify-content:center;justify-content:center}
 
-header nav {
-  height: 70px;
-  width: 100%;
-  background-color: #474747;
-  position: absolute;
-  top: 70px;
-  right: 0;
-  left: 5%; }
-
-header .search {
-  height: 75px;
-  width: 100%;
-  background-color: #ebebeb;
-  padding: 15px 0; }
+header .wrap-logo{height:70px;width:100%;background-color:#373737;position:absolute;top:0;left:0;right:0}header .wrap-logo .logo{width:70px;height:70px;margin-left:5%;background:#f26c4f url("../img/logo_50x50_wite.png") center center no-repeat;position:relative;display:inline-block}header .wrap-logo .logo:after{content:"";display:block;width:0;height:0;border-style:solid;border-width:12.5px 0 12.5px 15px;border-color:transparent transparent transparent #f26d4f;position:absolute;top:0;bottom:0;right:-15px;margin:auto}header .wrap-logo h3{display:inline-block;position:absolute;top:0;bottom:0;margin:auto 0 auto 30px;color:#fff;line-height:70px}header .wrap-logo .dropdown{float:right}header nav{height:70px;width:100%;background-color:#474747;position:absolute;top:70px;right:0;left:5%}header .search{height:75px;width:100%;background-color:#ebebeb;padding:15px 0}
