--- a/layout/index.html
+++ b/layout/index.html
@@ -27,34 +27,34 @@
                           <li role="separator" class="divider"></li>
                           <li><a href="#">Separated link</a></li>
                         </ul>
-                      </div>
+                    </div>
                     <div class="dropdown">
                         <i class="fa fa-map-marker"></i>
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                             Dropdown
                             <i class="fa fa-angle-down"></i>
                         </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                    </ul>
-                  </div>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                          <li><a href="#">Action</a></li>
+                          <li><a href="#">Another action</a></li>
+                          <li><a href="#">Something else here</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </div>
+                    <div class="bg"></div>
                 </div>
-                <nav>
-                    <ul>
+                <nav class="clearfix">
+                    <ul class="nav navbar-nav">
                         <li>Portfolio</li>
                         <li>Service</li>
                         <li>Staff</li>
                         <li>Articles</li>
                         <li>Contact</li>
                     </ul>
-                    <div>
+                    <div class="quik-links">
                         <span>Quiklinks</span>
-                        <div class="dropdown">
-                            <i class="fa fa-map-marker"></i>
+                        <div class="dropdown dark">
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                               Dropdown
                               <i class="fa fa-angle-down"></i>
@@ -68,6 +68,7 @@
                             </ul>
                           </div>
                     </div>
+                    <div class="bg"></div>
                 </nav>
                 <div class="search">
                     <input>
