--- a/layout/index.html
+++ b/layout/index.html
@@ -178,7 +178,7 @@
                     <li>About Us</li>
                     <li>How to</li>
                     <li>Write for us</li>
-                    <li>Video testimonials</li>
+                    <li>test and work</li>
                 </ul>
                 <div class="statistic">
                     
